# bookmaker-mistake-detector

./: .dockerignore  .env.example  .gitignore  EXECUTION_PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/bookmaker_detector_api/: config.py  data_quality_taxonomy.py  demo.py  main.py  team_normalization.py
backend/src/bookmaker_detector_api/api/: __init__.py  admin_demo_routes.py  admin_diagnostics_routes.py  admin_feature_routes.py  admin_market_board_routes.py  admin_model_routes.py  admin_model_support.py  admin_opportunity_routes.py  admin_routes.py  admin_scoring_routes.py  analyst_backtests.py  analyst_opportunities.py  analyst_patterns.py  analyst_trends.py  routes.py  test_routes.py
backend/src/bookmaker_detector_api/cli/: __init__.py  initial_production_dataset_load.py
backend/src/bookmaker_detector_api/db/: __init__.py  (+1 more)
backend/tests/: test_admin_routes.py  test_canonicalization.py  test_config.py  test_covers_provider.py  test_data_quality_taxonomy.py  test_feature_evidence_scoring.py  test_features.py  test_fetch_ingestion_runner.py  test_fixture_ingestion_runner.py  test_health.py  test_ingestion_pipeline.py  test_initial_dataset_load.py  test_model_task_semantics.py  test_models.py  test_postgres.py  test_repository_json_ownership.py  test_repository_json_promotion_candidates.py  test_repository_migration_authority.py  test_repository_policy.py  test_repository_schema_ownership.py  test_selection_policy_normalization.py  test_task_registry.py
backend/tests/support/: covers_fixtures.py  in_memory_ingestion_repository.py
worker/: Dockerfile  README.md  main.py  pyproject.toml
worker/src/bookmaker_detector_worker/: main.py
(+189 files in other folders)
