[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmaker-detector-worker"
version = "0.1.0"
description = "Worker process for the Bookmaker Mistake Detector"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "psycopg[binary]>=3.2,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.8,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
